Corrected bug removing noscroll class on mobile when it shouldn't.

--- a/client/packages/sidebar-news/news.import.less
+++ b/client/packages/sidebar-news/news.import.less
@@ -50,6 +50,7 @@ section#news {
         box-shadow:0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
         -webkit-box-shadow:0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
         .font(1.2,1.6,0.025,@normal,none);
+        @media @mobile{ display: none !important;}
         &:before{
             content: '';
             width: 0;
